...
                                                    <constraint firstAttribute="height" constant="35" id="Zgq-Or-a3g"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <color key="textColor" red="0.0" green="0.24209076169999999" blue="0.3172852397" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vw4-gN-oaC">
                                                <rect key="frame" x="0.0" y="35" width="170" height="35"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="CTv-aV-MDw"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <color key="textColor" red="0.0" green="0.41296310359999999" blue="0.54715303999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        <rect key="frame" x="0.0" y="5" width="75" height="30"/>
                                                        <color key="backgroundColor" red="0.0003639213101" green="0.19530883430000001" blue="0.25385063889999998" alpha="0.74760315749818917" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="30" id="PpK-7o-i1t"/>
                                                        </constraints>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Edit">
                                                            <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
                                                        </buttonConfiguration>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4UP-hi-nmo">
                                                        <rect key="frame" x="95" y="5" width="75" height="30"/>
                                                        <color key="backgroundColor" red="0.0003639213101" green="0.19530883430000001" blue="0.25385063889999998" alpha="0.74760315749999995" colorSpace="custom" customColorSpace="sRGB"/>
...
