...
        
        let editAlert = UIAlertController(title: "Edit Message", message: nil, preferredStyle: .alert)
        editAlert.addTextField { textField in
            textField.text = messageToEdit.message
        }
        
        let saveAction = UIAlertAction(title: "Save", style: .default) { [weak self, weak editAlert] _ in
            guard let newText = editAlert?.textFields?.first?.text else { return }
            messageToEdit.message = newText
            
            // Update the message content in the Firebase Realtime Database
            let databaseRef = Database.database().reference()
            let allChatPath = "allChat/\(self!.chatId)/\(messageToEdit.messageId)"
...
